# penguin-git

./: index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  credentials.rs  lib.rs  main.rs  settings.rs
src-tauri/src/commands/: credentials.rs  git_local.rs  git_remote.rs  mod.rs  project.rs  settings.rs  ssh.rs  system.rs
src-tauri/src/git/: backend.rs  cli_backend.rs  gix_backend.rs  mod.rs  models.rs
src-tauri/src/ssh/: mod.rs
src/components/: DiffView.vue  MessageBridge.vue
src/i18n/: en-US.json  index.ts  zh-CN.json
src/lib/: diffParser.ts  gitignoreTemplates.ts  notify.ts  tauri.ts  types.ts
src/stores/: appStore.ts  gitStore.ts  onboardingStore.ts  projectStore.ts  settingsStore.ts
src/styles/: global.css
src/theme/: themes.ts
src/views/: GlobalSettings.vue  ProjectSelect.vue
src/views/Dashboard/: ChangesView.vue  DashboardLayout.vue  HistoryView.vue  SettingsView.vue
src/views/Onboarding/: AddKeyStep.vue  DoneStep.vue  GitCheckStep.vue  InitStep.vue  OnboardingLayout.vue  ProjectStep.vue  RemoteStep.vue  SshKeyStep.vue  TestConnStep.vue  WelcomeStep.vue
