[package]
name = "penguin-git"
version = "0.1.1"
description = "A friendly Git version management tool for beginners"
authors = ["you"]
edition = "2021"

[lib]
name = "penguin_git_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gix = { version = "0.85", features = ["serde"] }
ssh-key = { version = "0.6", features = ["ed25519"] }
rand = { version = "0.8", features = ["getrandom"] }
open = "5"
arboard = "3"
aes-gcm = "0.10"
notify = "7"
notify-debouncer-full = "0.4"
tokio = { version = "1", features = ["full"] }
dirs = "6"
which = "7"
thiserror = "2"
log = "0.4"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

